--- a/contacto.html
+++ b/contacto.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    <section>
+    <section class="container">
         <h2>NOSTRA PIZZA</h2>
         <div class="container__div">
             <div class="form__div">
