--- a/contacto.html
+++ b/contacto.html
@@ -12,24 +12,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    <section class="container">
-        <h2>NOSTRA PIZZA</h2>
+    <section class="container__contac">
+        <h2 class="contactoh2">CONTACTO NOSTRA PIZZA</h2>
         <div class="container__div">
             <div class="form__div">
                 <form action="" class="form__container">
-                    <div class="form__container_ap">
+                    <div class="form__container">
                         <input type="text" id="nombre">
                         <label for="nombre">Apellido y Nombre</label>
                     </div>
-                    <div class="form__container_em">
+                    <div class="form__container">
                         <input type="email" id="email">
                         <label for="email">Email</label>
                     </div>
-                    <div class="form__container_tel">
+                    <div class="form__container">
                         <input type="tel" id="tel">
                         <label for="tel">Telefono</label>
                     </div>
-                    <div class="form__container_pr">
+                    <div class="form__container">
                         <input type="text" id="provincia">
                         <label for="provincia">Provincia</label>
                     </div>
@@ -37,7 +37,7 @@
                         <textarea name="" id="comenta" cols="30" rows="3"></textarea>
                         <label for="comenta">Dejanos tu Experiencia</label>
                     </div>
-                    <div class="button__container">
+                    <div class="form__container_tex">
                         <button>
                             <a href="">Enviar</a>
                         </button>
@@ -45,19 +45,19 @@
                 </form>
             </div>
             <div class="info__div">
-                <p>Mas Información</p>
+                <p class="info__div_p">Mas Información</p>
                 <ul>
                     <li class="li__email">
                         <img class="li__email_img" src="/assets/iconos/email.png" alt="nostrapizza@gimail.com">
-                        <p class="li__email_p">nostrapizza@gmail.com</p>
+                        <span class="li__email_p">nostrapizza@gmail.com</span>
                     </li>
                     <li class="li__tel">
                         <img class="li__tel_img" src="/assets/iconos/telefono.png" alt="telefono numero 381-695-225577">
-                        <p class="li__tel_p">381-695-225577</p>
+                        <span class="li__tel_p">381-695-225577</span>
                     </li>
                     <li class="li__ub">
                         <img class="li__ub_img" src="/assets/iconos/ubicacion.png" alt="25 de mayo 444">
-                        <p class="li__ub_p">25 de Mayo 444</p>
+                        <span class="li__ub_p">25 de Mayo 444</span>
                     </li>
                 </ul>
                 <p class="info__p">
