--- a/contacto.html
+++ b/contacto.html
@@ -46,25 +46,31 @@
             </div>
             <div class="info__div">
                 <p class="info__div_p">Mas Información</p>
-                <ul>
-                    <li class="li__email">
-                        <img class="li__email_img" src="/assets/iconos/email.png" alt="nostrapizza@gimail.com">
-                        <span class="li__email_p">nostrapizza@gmail.com</span>
-                    </li>
-                    <li class="li__tel">
-                        <img class="li__tel_img" src="/assets/iconos/telefono.png" alt="telefono numero 381-695-225577">
-                        <span class="li__tel_p">381-695-225577</span>
-                    </li>
-                    <li class="li__ub">
-                        <img class="li__ub_img" src="/assets/iconos/ubicacion.png" alt="25 de mayo 444">
-                        <span class="li__ub_p">25 de Mayo 444</span>
-                    </li>
-                </ul>
+                <div class="container__ul">
+                    <ul>
+                        <li class="li__email">
+                            <img class="li__email_img" src="/assets/iconos/email.png" alt="nostrapizza@gimail.com">
+                            <span class="li__email_p">nostrapizza@gmail.com</span>
+                        </li>
+                        <li class="li__tel">
+                            <img class="li__tel_img" src="/assets/iconos/telefono.png" alt="telefono numero 381-695-225577">
+                            <span class="li__tel_p">381-695-225577</span>
+                        </li>
+                        <li class="li__ub">
+                            <img class="li__ub_img" src="/assets/iconos/ubicacion.png" alt="25 de mayo 444">
+                            <span class="li__ub_p">25 de Mayo 444</span>
+                        </li>
+                    </ul>
+                </div>
                 <p class="info__p">
                     Estamos para tratar de brindarte un momento inolbidable, por eso nos interesan todos tus comentarios, 
                     y así poder mejorar nuestro servicio, ya sea en el local o en tu domicilio. 
                 </p>
             </div>
+        </div>
+        <div class="maps">
+            <h3>Aquí nos Encoramos</h3>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3560.5851083463804!2d-65.20789788163725!3d-26.821336249883792!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94225c3d5f358589%3A0x8dadfbbda8f0977!2sMarcos%20Paz%20600%2C%20San%20Miguel%20de%20Tucum%C3%A1n%2C%20Tucum%C3%A1n!5e0!3m2!1ses-419!2sar!4v1668386495337!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">Hola</iframe>
         </div>
     </section>
 </body>
